2013-03-26  Jan Djärv  <jan.h.d@swipnet.se>

	* gtkutil.c (style_changed_cb): Check if frame is live and an
	X frame (Bug#14038).

2013-03-26  Eli Zaretskii  <eliz@gnu.org>

	* w32.c (_PROCESS_MEMORY_COUNTERS_EX) [_WIN32_WINNT < 0x0500]:
	Define only for _WIN32_WINNT less than 0x0500.
	(_ANONYMOUS_UNION, _ANONYMOUS_STRUCT) [!_W64]: Don't define for
	MinGW64.
	Move inclusion of time.h before sys/time.h, so that MinGW64 could
	see its own definitions of 'struct timeval' and 'struct timezone'.

	Fix incompatibilities between MinGW.org and MinGW64 headers.
	* w32term.c (WCRANGE, GLYPHSET): Don't define if _W64 is defined.

	* w32.c (REPARSE_DATA_BUFFER): Guard with
	MAXIMUM_REPARSE_DATA_BUFFER_SIZE being defined.

2013-03-25  Jan Djärv  <jan.h.d@swipnet.se>

	* xterm.c: Include X11/XKBlib.h
	(XTring_bell): Use XkbBell if HAVE_XKB (Bug#14041).

2013-03-24  Andreas Schwab  <schwab@linux-m68k.org>

	* alloc.c (xpalloc, Fgarbage_collect): Reorder conditions that are
	written backwards.
	* blockinput.h (input_blocked_p): Likewise.
	* bytecode.c (exec_byte_code): Likewise.
	* callproc.c (call_process_kill, call_process_cleanup)
	(Fcall_process): Likewise.
	* ccl.c (ccl_driver, resolve_symbol_ccl_program)
	(Fccl_execute_on_string): Likewise.
	* character.c (string_escape_byte8): Likewise.
	* charset.c (read_hex): Likewise.
	* cm.c (calccost): Likewise.
	* data.c (cons_to_unsigned): Likewise.
	* dired.c (directory_files_internal, file_name_completion):
	Likewise.
	* dispnew.c (scrolling_window, update_frame_1, Fsleep_for)
	(sit_for): Likewise.
	* doc.c (Fsubstitute_command_keys): Likewise.
	* doprnt.c (doprnt): Likewise.
	* editfns.c (hi_time, decode_time_components, Fformat): Likewise.
	* emacsgtkfixed.c: Likewise.
	* fileio.c (file_offset, Fwrite_region): Likewise.
	* floatfns.c (Fexpt, fmod_float): Likewise.
	* fns.c (larger_vector, make_hash_table, Fmake_hash_table):
	Likewise.
	* font.c (font_intern_prop): Likewise.
	* frame.c (x_set_alpha): Likewise.